window: allow websites to handle shift+click events

Currently we allow websites to cancel all mouse events EXCEPT
shift+click -> download page. This doesn't make much sense and there's
no technical reason it has to be this way, so handle it the same way we
do other shortcuts instead, when handling navigation policy decisions,
rather than intercepting the event before it even reaches WebKit.

https://bugzilla.gnome.org/show_bug.cgi?id=740618